# sofia2hdf5

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  rename_old_setpsetup.py
cpp/: Makefile  Notes.txt  README.md  build.sh  common.c  common.h  config.c  config.h  hdf5_writer.c  hdf5_writer.h  main.c  parameter.c  parameter.h  reader.c  reader.h  sofia2hdf5  utils.c  utils.h
docs/source/: Advanced.rst  conf.py  index.rst
package_name/: __init__.py  main.py
package_name/common/: common.py
package_name/config/: config.py
sofia2hdf5/: __init__.py  main.py
sofia2hdf5/config/: config.py
sofia2hdf5/functions/: overhead.py  read.py  variable_determination.py  write.py
sofia2hdf5/support/: errors.py
