[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sofia2hdf5"
version = "0.0.0"
description = "Development Status :: unfinished"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
authors = [
    { name = "P. Kamphuis", email = "peterkamphuisastronomy@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "future-fstrings",
    "psutil",
    "omegaconf",
    "astropy",
    "h5py",
]

[project.urls]
Homepage = "https://github.com/PeterKamphuis/sofia2hdf5"

[project.scripts]
sofia2hdf5 = "sofia2hdf5.main:main"